--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    
 </body>
 
 </html>
