terminado el html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,72 @@
   <title></title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
-
+  <div class="page">
+     <section class="info">
+      <header class="info__header">
+        <h1 class="info__logo">GlowQueen</h1>
+        <nav class="info__nav">
+          <ul class="nav__list">
+            <li class="list__items"><a href="#" class="items__link">Home</a></li>
+            <li class="list__items"><a href="#" class="items__link">About</a></li>
+            <li class="list__items"><a href="#" class="items__link">Services</a></li>
+            <li class="list__items"><a href="#" class="items__link">Facilities</a></li>
+            <li class="list__items"><a href="#" class="items__link">More</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main class="info__main">
+        <h2 class="main__title">Bring back the beauty and glow of your skin</h2>
+        <p class="main__text">We provide you various treatments from head to toe using the best product, advanced technology, and affordable price</p>
+        <ul class="main__buttons">
+          <li><a href="#" class="buttons__button--color">Book Now</a></li>
+          <li><a href="#" class="buttons__button"> Watch <Video></Video></a></li>.
+        </ul>
+      </main>
+     </section>
+     <section class="background">
+      <section class="background__header">
+        <div class="background__icons">
+          <figure class="icons_icon"><img src="./img/search.svg" alt="search"></figure>
+          <figure class="icons_icon"><img src="./img/ShoppingBag.svg" alt="search"></figure>
+        </div>
+        <div class="background__buttons">
+            <ul class="buttons__list">
+              <li><a href="#" class="list__button">Sign In</a></li>
+              <li><a href="#" class="list__button--color"> Sign Up</a></li>
+            </ul>
+        </div>
+      </section>
+      <article class="background__article">
+        <figure class="article__figure"><img src="./img/quotes.svg" alt="quotes"></figure>
+        <p class="article__text">I have a regular schedule to take treatment from GlowQueen, 
+          they gave me the best service and treatment ever to maintain the beauty and health of my skin</p>
+        <h3 class="article__name">Sophia Princeton</h3>
+      </article>
+      <figure class="article__figure"><img src="./img/quotes.svg" alt="quotes"></figure>
+      <p class="article__text">For the past few years, I've had a hard time finding the right place for 
+        skin care to deal with my complicated skin condition, thank God I found GlowQueen to treat my skin</p>
+      <h6 class="article__name">Tamara Jules</h6>
+      </article>
+    </section>
+    <section class="categories">
+      <div class="categories__category">
+        <figure class="category__img"><img src="./img/special-treatment.svg" alt="face"></figure>
+        <h3 class="category__numbers">15 +</h3>
+        <p class="category__info">Special Treatment</p>
+      </div>
+      <div class="categories__category">
+        <figure class="category__img"><img src="./img/professional-therapist.svg" alt="flowers"></figure>
+        <h3 class="category__numbers">25 +</h3>
+        <p class="category__info">Professional Therapist</p>
+      </div>
+      <div class="categories__category">
+        <figure class="category__img"><img src="./img/herbal-cream-formula.svg" alt="herbal"></figure>
+        <h3 class="category__numbers">100 %</h3>
+        <p class="category__info">Herbal Cream Formula</p>
+      </div>
+    </section>
+  </div>
 <body>
     
 </body>
